[project]
name = "project-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cudf-cu13>=26.6.0",
    "cuml-cu13>=26.6.0",
    "dask-cuda==26.6.0",
    "datasets>=5.0.0",
    "duckdb>=1.5.3",
    "langdetect>=1.0.9",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "polars>=1.41.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "transformers>=5.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
