[project]
name = "project-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=7.0.5",
    "cudf-cu13>=26.6.0",
    "cuml-cu13>=26.6.0",
    "dask-cuda==26.6.0",
    "datasets>=5.0.0",
    "duckdb>=1.5.3",
    "fast-langdetect>=0.3.0",
    "nltk>=3.0",
    "matplotlib>=3.11.0",
    "nbdiff>=1.0.3",
    "nbdime>=4.0.4",
    "numpy>=2.4.6",
    "openai>=2.44.0",
    "polars>=1.41.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "transformers>=5.11.0",
    "nbdime>=4.0.4",
    "langchain>=1.3.12",
    "langchain-openrouter>=0.2.6",
    "langgraph>=1.2.8",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
]
