[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse"
version = "0.1.0"
description = "Persona discovery pipeline for clustering text embeddings."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Pulse Team" }
]
dependencies = [
    "numpy",
    "polars",
    "pyarrow",
    "duckdb",
    "datasets",
    "fast-langdetect",
    "nltk",
    "transformers",
    "sentence-transformers",
    "torch",
    "typer",
    "pyyaml",
]

[project.optional-dependencies]
cpu = [
    "scikit-learn",
    "umap-learn",
    "hdbscan",
]

cuda = [
    "cupy-cuda12x",
    "cuml-cu12",
]

dev = [
    "pytest",
    "ruff",
    "mypy",
    "scikit-learn",
    "umap-learn",
]

[project.scripts]
pulse-personas = "pulse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pulse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true